--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "firebase": "^11.6.0",
     "nodemailer": "^6.9.11",
     "sqlite3": "^5.1.7"
   }
